# platypus

./: .gitignore  ARCHITECTURE.md  COMPREHENSIVE_TEST_COMPLETION.md  CONTINUATION_SUMMARY.md  Cargo.toml  DEPLOYMENT_GUIDE.md  EXAMPLE_APPLICATIONS.md  FINAL_MIGRATION_STATUS.md  FINAL_STATUS.md  FRONTEND_IMPLEMENTATION.md  GETTING_STARTED.md  IMPLEMENTATION_COMPLETE.md  LICENSE  MIGRATION_COMPLETE.md  MIGRATION_PROGRESS.md  NEXT_SESSION_GUIDE.md  PHASE_2_COMPLETION.md  PHASE_2_GUIDE.md  PHASE_2_PROGRESS.md  PHASE_2_STATUS.md  PHASE_3_COMPLETION_REPORT.md  PHASE_3_PROGRESS.md  PRODUCTION_CHECKLIST.md  PRODUCTION_ROADMAP.md  PROJECT_STATUS.txt  QUICK_REFERENCE.md  QUICK_START_NEXT_SESSION.md  README.md  README_FINAL.md  RENAME_COMPLETE.md  SESSION_COMPLETE.md  SESSION_FINAL_SUMMARY.md  SESSION_SUMMARY.md  STAGING_DEPLOYMENT.md  STATUS_REPORT.md  STREAMLIT_COMPATIBILITY_SUMMARY.md  STREAMLIT_MIGRATION_STATUS.md  TESTING_FRAMEWORK.md  TODO.md  WEEK1_COMPLETION.md
crates/chatapp-cli/: Cargo.toml
crates/chatapp-cli/src/: main.rs
crates/chatapp-core/: Cargo.toml
crates/chatapp-core/benches/: element_benchmarks.rs
crates/chatapp-core/src/: element.rs  error.rs  lib.rs  session.rs  state.rs  widget.rs
crates/chatapp-core/src/elements/: additional_widgets.rs  display.rs  feedback.rs  input.rs  layout.rs  mod.rs  responsive.rs  themeable.rs  widgets.rs
crates/chatapp-core/tests/: element_integration_tests.rs
crates/chatapp-proto/: Cargo.toml
crates/chatapp-proto/proto/: element.proto  forward_msg.proto
crates/chatapp-runtime/: Cargo.toml
crates/chatapp-runtime/src/: context.rs  error.rs  session_store.rs
crates/chatapp-runtime/tests/: integration_tests.rs
crates/chatapp-server/: Cargo.toml
crates/chatapp-server/src/: error.rs  executor.rs  handler.rs  lib.rs  message.rs  server.rs  ws.rs
crates/platypus-cli/: Cargo.toml
crates/platypus-cli/src/: main.rs
crates/platypus-core/src/: element.rs  state.rs  traits_impl.rs
crates/platypus-core/src/elements/: factory.rs
crates/platypus-proto/: Cargo.toml
crates/platypus-proto/proto/: back_msg.proto  element.proto  forward_msg.proto
crates/platypus-proto/src/: lib.rs
crates/platypus-runtime/: Cargo.toml
crates/platypus-runtime/src/: cache.rs  components.rs  context.rs  lib.rs  navigation.rs  secrets.rs
crates/platypus-runtime/tests/: chart_tests.rs  final_features_tests.rs  integration_tests.rs  phase3_features_tests.rs  phase5_features_tests.rs
crates/platypus-server/frontend/: index.html
crates/platypus-server/src/: executor.rs  lib.rs  message.rs  server.rs  ws.rs
docs/: CLEANUP_COMPLETE.md  CLEANUP_PLAN.md  CONFIGURATION.md  FINAL_STATUS.md  INDEX.md  MIGRATION_CHECKLIST.md  NO_HARDCODING_COMPLETE.md  STREAMLIT_COMPATIBILITY_TESTS.md  TESTING_OVERVIEW.md  TEST_SUITE_INDEX.md
docs/archive/: ARCHITECTURE_IMPROVEMENTS.md  COMPLETION_CHECKLIST.md  CONTINUATION_2_SUMMARY.md  CONTINUATION_SUMMARY.md  GETTING_STARTED.md  GIT_PUSH_COMPLETE.md  INDEX.md  MIGRATION_100_PERCENT_COMPLETE.md  MIGRATION_COMPLETE.md  MIGRATION_SUMMARY.md  MIGRATION_SUMMARY.txt  PHASE_2_CHART_MIGRATION_COMPLETE.md  PHASE_2_COMPLETION.md  PHASE_2_GUIDE.md  PHASE_2_PROGRESS.md  PHASE_2_STATUS.md  PHASE_3_PROGRESS.md  PHASE_4_INTEGRATION.md  PHASE_5_COMPLETION_REPORT.md  QUICK_REFERENCE.md  QUICK_START_NEXT_SESSION.md  README_FINAL.md  SESSION_SUMMARY.md  STATUS_REPORT.md  WEEK1_COMPLETION.md
examples/: Cargo.toml  README.md  calculator.rs  data_explorer.rs  form_example.rs  hello_world.rs
frontend/: README.md  index.html  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  advanced-renderer.tsx  caching.ts  carbon-theme.css  charts.tsx  connection.ts  events.ts  examples.tsx  index.css  integration-test.ts  performance.ts  proto.ts  renderer.tsx  responsive-layout.ts  router.ts  state.ts
src/platypus-cli/src/: main.rs
src/platypus-core/: Cargo.toml
src/platypus-core/benches/: element_benchmarks.rs
src/platypus-core/src/: error.rs  traits.rs
src/platypus-core/src/elements/: advanced.rs
src/platypus-core/tests/: element_integration_tests.rs
src/platypus-proto/: build.rs
src/platypus-proto/proto/: back_msg.proto
src/platypus-proto/src/: lib.rs
src/platypus-runtime/src/: context.rs  error.rs  event.rs  session_store.rs
src/platypus-runtime/tests/: phase5_features_tests.rs  streamlit_compatibility_tests.rs
src/platypus-server/: Cargo.toml
src/platypus-server/frontend/: index.html
src/platypus-server/src/: config.rs  error.rs  handler.rs  lib.rs  server.rs  ws.rs
