[package]
name = "chatapp-runtime"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
chatapp-core = { path = "../chatapp-core" }
chatapp-proto = { path = "../chatapp-proto" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
dashmap = { workspace = true }
parking_lot = { workspace = true }

[dev-dependencies]
insta = { workspace = true }
