[package]
name = "platypus-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "platypus"
path = "src/main.rs"

[dependencies]
platypus-core = { path = "../platypus-core" }
platypus-runtime = { path = "../platypus-runtime" }
platypus-server = { path = "../platypus-server" }
tokio = { workspace = true }
clap = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
