[package]
name = "platypus-runtime"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
platypus-core = { path = "../platypus-core" }
platypus-proto = { path = "../platypus-proto" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
dashmap = { workspace = true }
parking_lot = { workspace = true }

[dev-dependencies]
insta = { workspace = true }
