[package]
name = "platypus-server"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
platypus-core = { path = "../platypus-core" }
platypus-proto = { path = "../platypus-proto" }
platypus-runtime = { path = "../platypus-runtime" }
tokio = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
prost = { workspace = true }
tokio-tungstenite = { workspace = true }
futures = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }
dashmap = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
insta = { workspace = true }
